--- a/data/json/requirements/cooking_components.json
+++ b/data/json/requirements/cooking_components.json
@@ -67,6 +67,43 @@
     "components": [ [ [ "hard_liquor_chem", 1, "LIST" ], [ "denat_alcohol", 125 ] ] ]
   },
   {
+    "id": "meat_red",
+    "type": "requirement",
+    "//": "Anything you might consider raw 'red' meat.  About 300-400kcal of meat.",
+    "components": [
+      [
+        [ "meat", 1 ],
+        [ "meat_scrap", 10 ],
+        [ "rehydrated_meat", 1 ],
+        [ "meat_canned", 1 ]
+      ]
+    ]
+  },
+  {
+    "id": "meat_nofish",
+    "type": "requirement",
+    "//": "Any type of raw meat except for fish.  About 300-400kcal of meat.",
+    "components": [
+      [
+        [ "meat_red", 1, "LIST" ],
+        [ "liver", 5 ],
+        [ "kidney", 5 ],
+        [ "lung", 5 ],
+        [ "sweetbread", 5 ],
+        [ "bacon", 4 ],
+        [ "lunchmeat", 5 ],
+        [ "bologna", 5 ],
+        [ "can_spam", 4 ],
+        [ "can_chicken", 1 ],
+        [ "meat_pickled", 1 ],
+        [ "dry_meat", 1 ],
+        [ "jerky", 1 ],
+        [ "meat_smoked", 1 ],
+        [ "meat_salted", 1 ]
+      ]
+    ]
+  },
+  {
     "id": "seasoning_mild",
     "type": "requirement",
     "//": "Non-salt seasonings you might add to a dish to flavor it. Should be about a teaspoon, or smallest serving",
