--- a/data/json/requirements/cooking_components.json
+++ b/data/json/requirements/cooking_components.json
@@ -70,14 +70,7 @@
     "id": "meat_red",
     "type": "requirement",
     "//": "Anything you might consider raw 'red' meat.  About 300-400kcal of meat.",
-    "components": [
-      [
-        [ "meat", 1 ],
-        [ "meat_scrap", 10 ],
-        [ "rehydrated_meat", 1 ],
-        [ "meat_canned", 1 ]
-      ]
-    ]
+    "components": [ [ [ "meat", 1 ], [ "meat_scrap", 10 ], [ "rehydrated_meat", 1 ], [ "meat_canned", 1 ] ] ]
   },
   {
     "id": "meat_nofish",
@@ -208,6 +201,64 @@
         [ "juice_pulp", 2 ],
         [ "rehydrated_fruit", 1 ],
         [ "rhubarb", 2 ]
+      ]
+    ]
+  },
+  {
+    "id": "veggy_green",
+    "type": "requirement",
+    "//": "anything you would consider a leafy green vegetable",
+    "components": [
+      [
+        [ "cabbage", 1 ],
+        [ "irradiated_cabbage", 1 ],
+        [ "cattail_stalk", 1 ],
+        [ "lettuce", 1 ],
+        [ "irradiated_lettuce", 1 ],
+        [ "raw_dandelion", 1 ],
+        [ "rehydrated_veggy", 1 ],
+        [ "veggy", 1 ],
+        [ "veggy_wild", 1 ]
+      ]
+    ]
+  },
+  {
+    "id": "veggy_any",
+    "type": "requirement",
+    "components": [
+      [
+        [ "broccoli", 1 ],
+        [ "irradiated_broccoli", 1 ],
+        [ "cabbage", 1 ],
+        [ "irradiated_cabbage", 1 ],
+        [ "carrot", 2 ],
+        [ "irradiated_carrot", 1 ],
+        [ "cattail_stalk", 1 ],
+        [ "celery", 1 ],
+        [ "irradiated_celery", 1 ],
+        [ "corn", 1 ],
+        [ "irradiated_corn", 1 ],
+        [ "cucumber", 1 ],
+        [ "irradiated_cucumber", 1 ],
+        [ "lettuce", 1 ],
+        [ "irradiated_lettuce", 1 ],
+        [ "onion", 1 ],
+        [ "irradiated_onion", 1 ],
+        [ "plant_sac", 1 ],
+        [ "potato_raw", 1 ],
+        [ "potato_irradiated", 1 ],
+        [ "pumpkin", 1 ],
+        [ "irradiated_pumpkin", 1 ],
+        [ "raw_dandelion", 1 ],
+        [ "rhubarb", 1 ],
+        [ "irradiated_rhubarb", 1 ],
+        [ "sugar_beet", 1 ],
+        [ "tomato", 1 ],
+        [ "irradiated_tomato", 1 ],
+        [ "veggy", 1 ],
+        [ "veggy_wild", 1 ],
+        [ "zucchini", 1 ],
+        [ "irradiated_zucchini", 1 ]
       ]
     ]
   },
