--- a/data/json/requirements/cooking_components.json
+++ b/data/json/requirements/cooking_components.json
@@ -218,7 +218,8 @@
         [ "raw_dandelion", 1 ],
         [ "rehydrated_veggy", 1 ],
         [ "veggy", 1 ],
-        [ "veggy_wild", 1 ]
+        [ "veggy_wild", 1 ],
+        [ "veggy_salted", 1 ]
       ]
     ]
   },
