--- a/data/json/requirements/cooking_components.json
+++ b/data/json/requirements/cooking_components.json
@@ -256,10 +256,16 @@
         [ "sugar_beet", 1 ],
         [ "tomato", 1 ],
         [ "irradiated_tomato", 1 ],
+        [ "rehydrated_veggy", 1 ],
         [ "veggy", 1 ],
         [ "veggy_wild", 1 ],
+        [ "veggy_salted", 1 ],
         [ "zucchini", 1 ],
-        [ "irradiated_zucchini", 1 ]
+        [ "irradiated_zucchini", 1 ],
+        [ "rehydrated_veggy", 1 ],
+        [ "veggy", 1 ],
+        [ "veggy_wild", 1 ],
+        [ "veggy_salted", 1 ]
       ]
     ]
   },
@@ -272,7 +278,7 @@
   {
     "id": "weak_liquor",
     "type": "requirement",
-    "//": "Weak liquor - necessarily comestible and low proof, not necessarily hish quality",
+    "//": "Weak liquor - necessarily comestible and low proof, not necessarily high quality",
     "components": [
       [
         [ "beer", 1 ],
