--- a/data/json/requirements/cooking_components.json
+++ b/data/json/requirements/cooking_components.json
@@ -97,6 +97,41 @@
     ]
   },
   {
+    "id": "meat_cooked",
+    "type": "requirement",
+    "//": "meat you'd put on a sandwich",
+    "components": [
+      [
+        [ "meat_cooked", 1 ],
+        [ "meat_pickled", 1 ],
+        [ "meat_smoked", 1 ],
+        [ "meat_salted", 1 ],
+        [ "dry_meat", 1 ],
+        [ "rehydrated_meat", 1 ],
+        [ "jerky", 1 ],
+        [ "bacon", 1 ],
+        [ "lunchmeat", 2 ],
+        [ "bologna", 5 ],
+        [ "can_spam", 4 ],
+        [ "fried_spam", 4 ],
+        [ "can_chicken", 1 ],
+        [ "fish_cooked", 1 ],
+        [ "fish_smoked", 1 ],
+        [ "can_herring", 1 ],
+        [ "can_salmon", 1 ],
+        [ "can_tuna", 1 ],
+        [ "can_sardine", 1 ],
+        [ "can_clams", 1 ],
+        [ "fish_pickled", 1 ],
+        [ "cracklins", 1 ],
+        [ "meat_aspic", 1 ],
+        [ "sausage", 1 ],
+        [ "sausage_cooked", 1 ],
+        [ "bratwurst_sausage", 1 ]
+      ]
+    ]
+  },
+  {
     "id": "seasoning_mild",
     "type": "requirement",
     "//": "Non-salt seasonings you might add to a dish to flavor it. Should be about a teaspoon, or smallest serving",
